fixed white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 }
 body {
   font-family: "Poppins", sans-serif;
+  max-width: 100%;
   overflow-x: hidden;
 }
 a {
@@ -12,13 +13,15 @@ a {
   color: #000;
 }
 .hero {
+  max-width: 100%;
   padding: 5rem 0;
 }
 .tagline {
   font-weight: 600;
   line-height: 1.25;
   font-size: 3rem;
-  margin: auto;
+  max-width: 100%;
+
   word-spacing: 250%;
 }
 
@@ -32,6 +35,7 @@ a {
   font-weight: 500;
   font-size: 1.25rem;
   color: #555555;
+  max-width: 100%;
 }
 .our-team {
   text-decoration: underline;
@@ -77,7 +81,6 @@ a {
     line-height: 1.1;
     font-size: 2rem;
     margin: auto;
-    max-width: 64rem;
   }
 }
 
@@ -88,13 +91,13 @@ a {
   .tagline {
     line-height: 1;
     font-size: 1.25rem;
-    margin: 1rem 1rem;
+    margin: 1rem;
     word-spacing: 110%;
   }
   .sub-heading {
     line-height: 1;
     font-size: 1rem;
-    margin: auto 1rem;
+    margin: auto;
     word-spacing: 100%;
   }
   .our-team {
